@@ -110,6 +110,9 @@ within it, the nested lookbehind was not correctly processed. For example, if
     
     (c) An empty string partial hard match can be returned for \z and \Z as it
     is documented that they shouldn't match. 
+    
+22. A branch that started with (*ACCEPT) was not being recognized as one that
+could match an empty string. 
 
 
 Version 10.33 16-April-2019
